--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
          <title>My first website</title>
      </head>
      <body>
-         <p>My first website</p>
+         <h1>Название компании: АО «Почта России»</h1>
+         <p>Тел.: +7 (495) 956-20-67</p>
      </body>
  </html>
